Version 3.23 - 12 December 2008, by Pascal "Pixel" Rigaux

- fix bad free() (thanks to glibc for detecting it)

Version 3.22 - 12 December 2008, by Pascal "Pixel" Rigaux

- fix scriptlet failing:
  adapt to librpm4.6, rpmtsSetRootDir(ts, "") is forbidden 

Version 3.21 - 9 December 2008, by Pascal "Pixel" Rigaux

- adapt to librpm4.6
- drop list_rpm_tag()

Version 3.20 - 14 October 2008, by Pascal "Pixel" Rigaux

- $trans->run can now return both the translated errors, and some parsable
  errors (useful for example to detect diskspace issues)
 
Version 3.19 - 7 October 2008, by Pascal "Pixel" Rigaux

- handle flag "replacefiles"

Version 3.18 - 7 July 2008, by Pascal "Pixel" Rigaux

- revert change introduced in 3.16 (it breaks too much, eg
  superuser--priority-upgrade.t test case), and introduce
  $state->{rejected_already_installed} instead

Version 3.17 - 4 July 2008, by Pascal "Pixel" Rigaux

- add traverse_tag_find(), removed_or_obsoleted_packages()
- handle $state->{orphans_to_remove} in selected_size() and
  build_transaction_set()

Version 3.16 - 26 June 2008, by Pascal "Pixel" Rigaux

- when not selecting a package because already installed,
  put it in $state->{rejected} with flags {installed}

Version 3.15 - 23 June 2008, by Pascal "Pixel" Rigaux

- fix urpmi wrongly considering epochless conflicts to match any epoch in a
  case when urpmi should upgrade a conflicting package to an actually
  non-conflicting version (cf epochless-conflict-with-promotion urpmi test)
  (Anssi)

Version 3.14 - 23 May 2008, by Pascal "Pixel" Rigaux

- add is_package_installed() in URPM/Resolve.pm
  (to be used in urpmi 5.20)

Version 3.13 - 20 May 2008, by Pascal "Pixel" Rigaux

- do not ignore dropped provide from updated package (mdvbz#40842)

Version 3.12 - 7 March 2008, by Pascal "Pixel" Rigaux

- do allow to promoting a pkg even if it has unsatisfied require (since the
  code will then fix the unsatisfied require). fixes "big transaction" 