@@ -1,3 +1,6 @@
+- fix sorting choices on provided version (feature introduced in 3.08, 
+  but was not working if packages were coming from different repository)
+
 Version 3.23 - 12 December 2008, by Pascal "Pixel" Rigaux
 
 - fix bad free() (thanks to glibc for detecting it)
